# otrs-mcp-server

./: Dockerfile  README.md  pyproject.toml
src/otrs_mcp/: __init__.py  main.py  server.py
tests/: connectivity_test.py  debug_test.py  simple_test.py  test_working_api.py
