[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-template"
version = "0.1.0"
description = "A template for building Model Context Protocol (MCP) servers"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]

[project.scripts]
mcp-server = "mcp_server_template.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/mcp-server-template"
Repository = "https://github.com/yourusername/mcp-server-template"
Issues = "https://github.com/yourusername/mcp-server-template/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_template"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true 