[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otrs-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for OTRS (Open Ticket Request System) integration"
authors = [
    {name = "Season Poon", email = "seasonpoon.admin@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]

[project.scripts]
otrs-mcp-server = "otrs_mcp.main:run_server"

[project.urls]
Homepage = "https://github.com/yourusername/otrs-mcp-server"
Repository = "https://github.com/yourusername/otrs-mcp-server"
Issues = "https://github.com/yourusername/otrs-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/otrs_mcp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 